Adjust padding of block switcher chip to avoid toolbar clipping.

--- a/editor/components/block-switcher/style.scss
+++ b/editor/components/block-switcher/style.scss
@@ -5,7 +5,7 @@
 .editor-block-switcher__toggle {
 	width: auto;
 	margin: 0;
-	padding: 8px;
+	padding: 6px;
 	border-radius: 0;
 
 	&:focus:before {
